--- a/Alterful/MainWindow.xaml
+++ b/Alterful/MainWindow.xaml
@@ -5,11 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Alterful"
         mc:Ignorable="d"
-        Title="Alterful Demo" Height="210.874" Width="312" Visibility="Visible" Foreground="White" Background="Black" Topmost="True">
-    <Grid>
-        <TextBox x:Name="InstructionTextBox" HorizontalAlignment="Left" Height="33" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="209" Background="White" KeyDown="InstructionTextBox_KeyDown"/>
-        <Button x:Name="ExecuteButton" Content="Execute" HorizontalAlignment="Left" VerticalAlignment="Top" Width="89" Margin="209,-1,-0.4,0" Height="34" Click="ExecuteButton_Click"/>
-        <TextBox x:Name="InstructionOutputTextBox" IsReadOnly="True" HorizontalAlignment="Left" Height="149" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="298" Background="White" KeyDown="InstructionTextBox_KeyDown" Margin="0,33,0,-0.4"/>
-
+        Title="Alterful Demo" Width="250" Visibility="Visible" Foreground="White" Background="{x:Null}" Topmost="True" WindowStyle="None" SnapsToDevicePixels="True" Cursor="IBeam" Height="160" ResizeMode="NoResize" VerticalAlignment="Bottom" MaxHeight="520" VerticalContentAlignment="Bottom" ShowInTaskbar="False">
+    <Grid VerticalAlignment="Bottom">
+        <TextBox x:Name="InstructionTextBox" BorderBrush="SlateGray" TextWrapping="NoWrap" Text="" Background="Black" KeyDown="InstructionTextBox_KeyDown" Margin="0,0,0,0" Height="24" Foreground="White" BorderThickness="1" VerticalAlignment="Bottom" VerticalContentAlignment="Center" AllowDrop="False" TextChanged="InstructionTextBox_TextChanged" PreviewKeyDown="InstructionTextBox_PreviewKeyDown"/>
+        <RichTextBox x:Name="TestRichTextbox" IsReadOnly="True" VerticalScrollBarVisibility="Hidden" Margin="0,0,0,24" Background="Black" Foreground="White" VerticalAlignment="Bottom" BorderThickness="1,1,1,0" IsTabStop="False" AllowDrop="False" IsHitTestVisible="True" KeyDown="TestRichTextbox_KeyDown">
+            <FlowDocument>
+                <Paragraph LineHeight="1"/>
+            </FlowDocument>
+        </RichTextBox>
     </Grid>
 </Window>
