--- a/Alterful/MainWindow.xaml
+++ b/Alterful/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="Alterful Demo" Width="250" Visibility="Visible" Foreground="White" Background="{x:Null}" Topmost="True" WindowStyle="None" SnapsToDevicePixels="True" Cursor="IBeam" Height="160" ResizeMode="NoResize" VerticalAlignment="Bottom" MaxHeight="520" VerticalContentAlignment="Bottom" ShowInTaskbar="False">
     <Grid VerticalAlignment="Bottom">
-        <RichTextBox x:Name="TestRichTextbox" IsReadOnly="True" VerticalScrollBarVisibility="Hidden" Margin="0,0,0,24" Background="Black" Foreground="White" VerticalAlignment="Bottom" BorderThickness="1,1,1,0" IsTabStop="False" AllowDrop="False" IsHitTestVisible="True" KeyDown="TestRichTextbox_KeyDown">
+        <RichTextBox x:Name="TestRichTextbox" IsReadOnly="True" VerticalScrollBarVisibility="Hidden" Margin="0,0,0,24" Background="Black" Foreground="White" VerticalAlignment="Bottom" BorderThickness="1,1,1,0" IsTabStop="False" AllowDrop="False" IsHitTestVisible="True" KeyDown="TestRichTextbox_KeyDown" TextChanged="TestRichTextbox_TextChanged">
             <FlowDocument>
                 <Paragraph LineHeight="1"/>
             </FlowDocument>
